com.top_logic.themes.core/src/main/webapp/style/form.css
/* ... */
.cal_view_switch {
	display: inline-flex;
	align-items: center;
	gap: var(--spacing-02);	
}

.cal_view_switch_header {
	white-space: nowrap;
	font-family: var(--font-family);
	font-weight: bold;
	font-size: var(--heading-compact-01-font-size);
	line-height: var(--heading-compact-01-line-height);
	letter-spacing: var(--heading-compact-01-letter-spacing);
}

div.cal_content, table.cal_fixed {
	height: 100%;
}

.cCalendar {
	background-color: var(--layer); 
}

.cCalendar .disabled {
	color: var(--text-on-color-disabled);
}

div.cal_content {
	background: var(--layer);
}

table.cal_table {
	border-width: 0px;
	width: 100%;
	padding: 0 var(--spacing-01) var(--spacing-01) var(--spacing-01);
}

th.cal_th {
	border-style: none;
	padding: var(--spacing-01) 0;
	font-family: var(--font-family);
    font-size: var(--body-01-font-size);
    line-height: var(--body-01-line-height);
    letter-spacing: var(--body-01-letter-spacing);
}

td.cal_cell {
	vertical-align: middle;
	text-align: center;
	cursor: pointer;
	margin: 0;
	padding: 0;
	height: 2rem;
    width: 2rem;
    font-family: var(--font-family);
    font-size: var(--body-01-font-size);
    line-height: var(--body-01-line-height);
    letter-spacing: var(--body-01-letter-spacing);
    background-color: var(--highlight-bg, inherit);
}

td.cal_cell:hover {
	background-color: var(--highlight-bg--hover, var(--layer-hover));
	color: var(--highlight-fg, var(--text-primary));
}

td.cal_cell a {
	/* Without display block, tab navigation through `cal_range` tables does not work. */
	display: block;
	color: var(--highlight-fg, inherit);

}

td.cal_cell a:hover {
	color: var(--highlight-fg, var(--text-primary));
	text-decoration: none;
}

td.cal_cell a:focus {
	outline: none;
}

/* Current day */
td.cal_now {
	border-color: var(--border-strong);
	border-style: solid;
	border-width: 1px;
	color: var(--highlight-fg, var(--text-primary));
}

/* Weekday */
td.cal_wd {	
	color: var(--highlight-fg, var(--text-primary));
}

/* Selected day */
td.cal_sel {
	background-color: var(--highlight-bg--selected, var(--background-brand));
  	color: var(--highlight-fg, var(--text-on-color));
}

/* Weekends */
td.cal_we:not(.cal_sel) {
	color: var(--highlight-fg, var(--text-placeholder));
}

/* Number of Week */
td.cal_wn, td.cal_wn:hover {
	background-color: var(--highlight-bg--hover, var(--layer-accent-active));
	color: var(--highlight-fg, var(--text-on-color));
	cursor: default;
}

/* Days of past or next month */
td.cal_om {
	color: var(--highlight-fg, var(--text-placeholder));
}

span.cal_range {
	display: table;
	margin: auto;
}

span.cal_rangePart {
	display: table-row;
	text-align: left;
}

div.cal_animation {
	display: none;
}

div.cal_nextAnimation, div.cal_previousAnimation {
    -webkit-animation: cal_slideAnimationFrames 0.3s; /* Chrome, Safari, Opera */
    animation: cal_slideAnimationFrames 0.3s;
    
    -webkit-animation-fill-mode: forwards; /* Chrome, Safari, Opera */
    animation-fill-mode: forwards;
}

@keyframes cal_slideAnimationFrames {
	0% {
	}
    100% {
    	left: 0px;
    }
}

@-webkit-keyframes cal_slideAnimationFrames {
	0% {
	}
    100% {
    	left: 0px;
    }
}

div.cal_zoom_outAnimation {
    -webkit-animation: cal_zoom_outAnimationFrames 0.3s; /* Chrome, Safari, Opera */
    animation: cal_zoom_outAnimationFrames 0.3s;
    
    -webkit-animation-fill-mode: forwards; /* Chrome, Safari, Opera */
    animation-fill-mode: forwards;
}

@keyframes cal_zoom_outAnimationFrames {
	0% {
	}
    100% {
    	transform: scale(0.4, 0.25);
    	opacity: 0.2;
    }
}

@-webkit-keyframes cal_zoom_outAnimationFrames {
	0% {
	}
    100% {
    	transform: scale(0.4, 0.25);
    	opacity: 0.2;
    }
}

div.cal_zoom_inAnimation {
    -webkit-animation: cal_zoom_inAnimationFrames 0.3s; /* Chrome, Safari, Opera */
    animation: cal_zoom_inAnimationFrames 0.3s;
    
    -webkit-animation-fill-mode: forwards; /* Chrome, Safari, Opera */
    animation-fill-mode: forwards;
}

@keyframes cal_zoom_inAnimationFrames {
	0% {
    	transform: scale(0.4, 0.25);
    	opacity: 0.2;
	}
    100% {
    	transform: scale(1, 1);
    	opacity: 1.0;
    }
}

@-webkit-keyframes cal_zoom_inAnimationFrames {
	0% {
    	transform: scale(0.4, 0.25);
    	opacity: 0.2;
	}
    100% {
    	transform: scale(1, 1);
    	opacity: 1.0;
    }
}

.cDatetime, 
.cDateInput, 
.cTimeInput {
	display: inline-flex;
	align-items: center;
}

.cDatetime .timePart {
	background: transparent;
}

.cIntegerInput.num {
	display: inline-flex;
	align-items: stretch;
}

.cIntegerInput input,
.cTextInput.num input {
	text-align: right;
}

.cDecoratedCell,
.cExpandableTextInput,
.cBlockTextInput {
	display: inline-flex;
}

.cPopupSelect.active {
	display: inline-flex;
	width: 100%;
}

.cPopupSelect.cannot-edit {
	display: inline-flex;
	flex-wrap: wrap;
	width: 100%;
}

.cCheckList {
    display: flex;
    align-items: center;
    gap: var(--spacing-02);
}

.tl-separator {
	padding-right: var(--spacing-02);
}

.cBlockTextInput .lFixedRight a:not(.lFlexible),
.cExpandableTextInput .lFixedRight a:not(.lFlexible) {
	height: inherit;
}

td.tl-table__cell--selected .cDecoratedCell a.input-image,
td.tl-table__cell--selected .cDecoratedCell a.input-image:hover,
td.tl-table__cell--selected .cDecoratedCell a.input-image:focus {
	color: var(--highlight-fg, var(--icon-secondary));
	outline: none !important;
}

.lFixedRight,
.cIntegerInput.num .lFixedRight {
	display: inline-flex;
	align-items: stretch;
	color: var(--button-fg, var(--icon-primary));
	background-color: var(--field);
}

.cDownload .lFixedRight {
	background-color: unset;
}

.lFixedRight a:not(.lFlexible),
.lFixedRight:not(.timePart) span:not(.lFlexible),
.lFixedRight span span:not(.lFlexible),
.lFixedRight .fChoose:not(.lFlexible) {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    color: var(--button-fg, var(--icon-primary));
    height: 2rem;
    width: 2rem;
}

.lFixedRight .button_minus {
	position: relative;
}
/* ... */

